2021-09-06  Dmitry V. Levin  <ldv@altlinux.org>

	* dynamicsizehash.c (INIT(NAME)): Remove cast of calloc return value.
	* dynamicsizehash_concurrent.c (INIT(NAME)): Remove cast of malloc
	return value.

2021-08-23  Saleem Abdulrasool  <abdulras@google.com>

	* system.h: Remove inline definition for error and error_message_count
	in the fallback path.
	* Makefile.am (libeu_a_SOURCES): Add error.c.
	* error.c: New file, moves the previous inline definitions to avoid
	multiple definitions properly rather than relying on -fcommon and vague
	linkage.

2021-08-21  Saleem Abdulrasool  <abdulras@google.com>

	* fixedsizehash.h: Remove unused STROF macro.

2021-08-20  Saleem Abdulrasool  <abdulras@google.com>

	* system.h: Check for HAVE_ERROR_H and HAVE_ERR_H and define
	error_message_cont and error if necessary.

2021-08-20  Saleem Abdulrasool  <abdulras@google.com>

	* fixedsizehash.h: Remove sys/cdefs.h include. Unconditionally
	define STROF and CONCAT macros.

2021-07-28  Mark Wielaard  <mark@klomp.org>

	* system.h (reallocarray): New static inline fallback function.

2021-04-19  Martin Liska  <mliska@suse.cz>

	* system.h (startswith): New function.
	(pwrite_retry): Cast to char *.
	(write_retry): Likewise.
	(pread_retry): Likewise.

2021-02-05  Mark Wielaard  <mark@klomp.org>

	* printversion.c (print_version): Update copyright year.

2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* color.c (parse_opt): Replace gettext(...) and
	dgettext("elfutils, ...) with _(...).
	* printversion.c (print_version): Replace gettext(...) with _(...).
	* system.h (sgettext): Likewise.

	* eu-config.h (_): New macro.
	* xmalloc.c (_): Remove.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>

	* system.h (ACCESSPERMS): Define macro if it doesn't exist.
	(ALLPERMS): Likewise.
	(DEFFILEMODE): Likewise.

2020-06-11  Mark Wielaaard  <mark@klomp.org>

	* printversion.c (print_version): Update copyright year.

2019-08-25  Srđan Milaković  <sm108@rice.edu>
